// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`composition hook should return with Divider props 1`] = `
Object {
  "aria-orientation": "horizontal",
  "children": undefined,
  "className": "css-wqoj3s css-63it0p css-1qnz8fc bb-Box bb-Divider",
  "role": "separator",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  border-color: var(--bb-palette-primary, #000000)!important;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`props should render correctly for vertical orientation 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<hr
  aria-orientation="vertical"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  border-color: var(--bb-palette-primary, #000000)!important;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`theming Divider.base should render correctly 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-0 {
  border-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;

exports[`theming Divider.vertical.base should render correctly 1`] = `
.emotion-0 {
  border: 1px solid var(--bb-palette-white800, #000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-0[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-0[aria-orientation="vertical"] {
  border-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<hr
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Divider"
  role="separator"
/>
`;
